--- a/areyouin/templates/areyouin/create_event.html
+++ b/areyouin/templates/areyouin/create_event.html
@@ -15,6 +15,7 @@
 			
 			
 			<input class="btn btn-primary" type="submit" name="submit" value="Create" />
+			Hold down "Control" to select multiple participants.
 		</form>
 		
 		
