--- a/areyouin/templates/areyouin/create_event.html
+++ b/areyouin/templates/areyouin/create_event.html
@@ -7,10 +7,13 @@
 	<h1>Create Event</h1>
 	    <form id="event_form" method="post" action="{% url 'areyouin:create_event' %}">
 			{% csrf_token %}
-			{{ event_form.non_field_errors }}
-			{% for field in event_form %}
-				{{ field.errors }}<br>
-				{{ field.label_tag }}<br/> {{ field }}
+			
+			
+			
+			
+			{% for field in event_form.visible_fields %}
+				
+				{{ field.label_tag }}<br/> {{ field }} {{ field.errors }}
 			{% endfor %}
 			
 			
